build/apps/minio/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: storage
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/name: minio
